syntax = "proto3";
import "Common.proto";
import "User.proto";
import "Image.proto";
import "Text.proto";

package tech.ordinaryroad.live.chat.client.douyin.protobuf;

option java_package = "tech.ordinaryroad.live.chat.client.douyin.protobuf";
option java_outer_classname = "Douyin_webcast_member_message_msgProto";
option java_multiple_files = true;
option objc_class_prefix = "GPB";

message douyin_webcast_member_message_msg {
  Common common = 1;
  User user = 2;
  uint64 memberCount = 3;
  User operator = 4;
  bool isSetToAdmin = 5;
  bool isTopUser = 6;
  int64 rankScore = 7;
  int64 topUserNo = 8;
  int64 enterType = 9;
  int64 action = 10;
  string actionDescription = 11;
  int64 userId = 12;
  // EffectConfig effectConfig = 13;
  string popStr = 14;
  // EffectConfig enterEffectConfig = 15;
  Image backgroundImage = 16;
  Image backgroundImageV2 = 17;
  Text anchorDisplayText = 18;
  // PublicAreaCommon publicAreaCommon = 19;
  int64 userEnterTipType = 20;
  int64 anchorEnterTipType = 21;
  map<string, string> buriedPointMap = 22;
}
